--- a/academics.html
+++ b/academics.html
@@ -28,25 +28,81 @@
         <li><a href="science.html">College of Science</a></li>
         <li><a href="liberal-arts.html">College of Liberal Arts</a></li>
         <li><a href="education.html">School of Education</a></li>
+        <li><a href="music.html">School of Music</a></li>
+        <li><a href="theater.html">School of Theater</a></li>
+        <li><a href="psychology.html">Department of Psychology</a></li>
+        <li><a href="physics.html">Department of Physics</a></li>
+        <li><a href="computer-science.html">Department of Computer Science</a></li>
+        <li><a href="communications.html">Department of Communications</a></li>
       </ul>
       <h3>Programs</h3>
       <ul>
         <li>Bachelor of Business Administration</li>
         <li>Master of Business Administration</li>
+        <li>Doctor of Business Administration</li>
         <li>Bachelor of Science in Computer Science</li>
+        <li>Master of Science in Computer Science</li>
+        <li>Doctor of Philosophy in Computer Science</li>
         <li>Bachelor of Science in Electrical Engineering</li>
         <li>Master of Science in Electrical Engineering</li>
+        <li>Doctor of Philosophy in Electrical Engineering</li>
         <li>Bachelor of Fine Arts in Painting</li>
         <li>Master of Fine Arts in Painting</li>
+        <li>Doctor of Fine Arts in Painting</li>
         <li>Bachelor of Science in Biology</li>
         <li>Master of Science in Biology</li>
+        <li>Doctor of Philosophy in Biology</li>
         <li>Bachelor of Arts in English</li>
         <li>Master of Arts in English</li>
-        <li>Bachelor of Educationin Elementary Education</li>
+        <li>Doctor of Philosophy in English</li>
+        <li>Bachelor of Education in Elementary Education</li>
         <li>Master of Education in Elementary Education</li>
+        <li>Doctor of Education in Elementary Education</li>
         <li>Bachelor of Science in Nursing</li>
         <li>Master of Science in Nursing</li>
+        <li>Doctor of Nursing Practice</li>
         <li>Doctor of Medicine</li>
+        <li>Bachelor of Arts in Economics</li>
+        <li>Master of Arts in Economics</li>
+        <li>Doctor of Philosophy in Economics</li>
+        <li>Bachelor of Arts in Political Science</li>
+        <li>Master of Arts in Political Science</li>
+        <li>Doctor of Philosophy in Political Science</li>
+        <li>Bachelor of Science in Finance</li>
+        <li>Master of Science in Finance</li>
+        <li>Doctor of Philosophy in Finance</li>
+        <li>Bachelor of Science in Accounting</li>
+        <li>Master of Science in Accounting</li>
+        <li>Doctor of Philosophy in Accounting</li>
+        <li>Bachelor of Arts in Creative Writing</li>
+        <li>Master of Arts in Creative Writing</li>
+        <li>Doctor of Philosophy in Creative Writing</li>
+        <li>Bachelor of Arts in Philosophy</li>
+        <li>Masterof Arts in Philosophy</li>
+        <li>Doctor of Philosophy in Philosophy</li>
+        <li>Bachelor of Music in Piano</li>
+        <li>Master of Music in Piano</li>
+        <li>Doctor of Musical Arts in Piano</li>
+        <li>Bachelor of Music in Voice</li>
+        <li>Master of Music in Voice</li>
+        <li>Doctor of Musical Arts in Voice</li>
+        <li>Bachelor of Fine Arts in Acting</li>
+        <li>Master of Fine Arts in Acting</li>
+        <li>Doctor of Fine Arts in Acting</li>
+        <li>Bachelor of Fine Arts in Musical Theater</li>
+        <li>Master of Fine Arts in Musical Theater</li>
+        <li>Doctor of Fine Arts in Musical Theater</li>
+        <li>Bachelor of Science in Psychology</li>
+        <li>Master of Science in Psychology</li>
+        <li>Doctor of Psychology</li>
+        <li>Doctor of Philosophy in Psychology</li>
+        <li>Bachelor of Science in Physics</li>
+        <li>Master of Science in Physics</li>
+        <li>Doctor of Philosophy in Physics</li>
+        <li>Bachelor of Arts in Communications</li>
+        <li>Master of Arts in Communications</li>
+        <li>Doctor of Philosophy in Communications</li>
+        <li>Juris Doctor</li>
       </ul>
       <p>Veritas University offers a wide range of undergraduate and graduate programs in a variety of fields. Our programs are designed to give students the skills and knowledge they need to succeed in their careers and make a positive impact in the world.</p>
       <p>In addition to our rigorous academic programs, we also offer a variety of extracurricular activities and opportunities for students to get involved on campus and in the community.</p>
