--- a/academics.html
+++ b/academics.html
@@ -35,7 +35,7 @@
         <li><a href="computer-science.html">Department of Computer Science</a></li>
         <li><a href="communications.html">Department of Communications</a></li>
       </ul>
-      <h3>Programs</h3>
+      <h3>Popular Programs</h3>
       <ul>
         <li>Bachelor of Business Administration</li>
         <li>Master of Business Administration</li>
@@ -104,7 +104,7 @@
         <li>Doctor of Philosophy in Communications</li>
         <li>Juris Doctor</li>
       </ul>
-      <p>Veritas University offers a wide range of undergraduate and graduate programs in a variety of fields. Our programs are designed to give students the skills and knowledge they need to succeed in their careers and make a positive impact in the world.</p>
+      <p>Veritas University offers a wide range of undergraduate and graduate programs in a variety of fields. Our programs are designed to give students the skills and knowledge they need to succeed in their careers and make a positive impact in the world. Please visit college and department websites for a full list of our academic offerings.</p>
       <p>In addition to our rigorous academic programs, we also offer a variety of extracurricular activities and opportunities for students to get involved on campus and in the community.</p>
     </main>
   </body>
