--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <h1>Veritas University</h1>
       <nav>
         <ul>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="academics.html">Academics</a></li>
           <li><a href="admissions.html">Admissions</a></li>
@@ -19,8 +20,9 @@
     </header>
     <main>
       <h2>Welcome to Veritas University</h2>
-      <p>Veritas University is a prestigious institution of higher learning located in the heart of the city. We offer a wide range of undergraduate and graduate programs in a variety of fields, including business, engineering, and the arts.</p>
-      <p>Our faculty are renowned experts in their fields, and our small class sizes ensure that students receive personalized attention and support. At Veritas, we are committed to providing a high-quality education that prepares students for success in their careers and in life.</p>
+      <p>Veritas University is a private, non-profit institution located in the heart of the city. Founded in 1891, we have a long history of providing high-quality education to students from all walks of life. Our mission is to provide an academically rigorous and well-rounded education that prepares students for success in their chosen careers and as responsible global citizens.</p>
+      <p>At Veritas University, you'll find a wide range of programs in the arts, sciences, humanities, and professional fields. Our faculty are distinguished scholars and practitioners who are dedicated to teaching and mentoring. Our campus offers a welcoming and supportive environment where students can learn, grow, and thrive.</p>
+      <p>We hope you'll consider joining the Veritas University community. Explore our website to learn more about our academics, admissions, campus life, and more. And don't hesitate to contact us with any questions you may have.</p>
     </main>
   </body>
 </html>
