--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="academics.html">Academics</a></li>
           <li><a href="admissions.html">Admissions</a></li>
           <li><a href="campus-life.html">Campus Life</a></li>
@@ -19,8 +20,14 @@
     </header>
     <main>
       <h2>About Veritas University</h2>
-      <p>Veritas University is a prestigious institution of higher learning located in the heart of the city. We offer a wide range of undergraduate and graduate programs in a variety of fields, including business, engineering, and the arts.</p>
-      <p>Our faculty are renowned experts in their fields, and our small class sizes ensure that students receive personalized attention and support. At Veritas, we are committed to providing a high-quality education that prepares students for success in their careers and in life.</p>
+      <h3>History</h3>
+      <p>Veritas University was founded in 1891 as a private, non-sectarian institution of higher learning. From the beginning, we have been committed to providing a high-quality education to students from all walks of life, regardless of their religious or philosophical beliefs. Our founders believed that education should be a force for good in the world, and that it should be available to everyone who was willing to work hard and embrace the opportunities it offers.</p>
+      <p>Over the years, Veritas University has grown and evolved. We have added new programs, built new facilities, and attracted distinguished faculty from around the world. But our core mission has remained the same: to provide a world-class education that prepares our students for success in their careers and as responsible global citizens.</p>
+      <h3>Mission and Values</h3>
+      <p>At Veritas University, we are committed to providing an academically rigorous and well-rounded education that prepares our students for success in their chosen careers and as responsible global citizens. We believe in the value of a liberal arts education, and we offer a wide range of programs in the arts, sciences, humanities, and professional fields.</p>
+      <p>We are also committed to promoting diversity, equity, and inclusion. We believe that a diverse and inclusive community is essential to our mission, and we strive to create a welcoming and supportive environment for all students, regardless of their background or identity.</p>
+      <h3>Accreditation</h3>
+      <p>Veritas University is accredited by the Higher Learning Commission (HLC). HLC is a regional accrediting agency recognized by the U.S. Department of Education. Accreditation by HLC indicates that Veritas University meets or exceeds standards set forth by the accrediting agency, including standards related to faculty, curriculum, student services, and institutional resources.</p>
     </main>
   </body>
 </html>
