--- a/business.html
+++ b/business.html
@@ -26,12 +26,17 @@
         <li><a href="finance.html">Finance</a></li>
         <li><a href="management.html">Management</a></li>
         <li><a href="accounting.html">Accounting</a></li>
+         <li><a href="business-administration.html">Business Administration</a></li>
       </ul>
       <h3>Graduate Programs</h3>
       <ul>
         <li><a href="mba.html">MBA</a></li>
         <li><a href="ms-finance.html">MS in Finance</a></li>
         <li><a href="ms-management.html">MS in Management</a></li>
+        <li><a href="PhD-Business-administration.html">Doctor of Business Administration</a></li>
+        <li><a href="phd-finance.html">Doctor of Philosophy in Finance</a></li>
+        <li><a href="phd-finance.html">Doctor of Philosophy in Accounting</a></li>
+        <li><a href="msa-accounting.html">MSA in Accounting</a></li>
       </ul>
       <p>The College of Business at Veritas University offers a range of programs that prepare students for successful careers in the business world. Our faculty are experienced professionals and distinguished scholars who are dedicated to teaching and mentoring. We offer small class sizes, hands-on learning opportunities, and a supportive and welcoming environment where students can thrive.</p>
     </main>
