--- a/index.html
+++ b/index.html
@@ -20,9 +20,22 @@
     </header>
     <main>
       <h2>Welcome to Veritas University</h2>
-      <p>Veritas University is a private, non-profit institution located in the heart of the city. Founded in 1891, we have a long history of providing high-quality education to students from all walks of life. Our mission is to provide an academically rigorous and well-rounded education that prepares students for success in their chosen careers and as responsible global citizens.</p>
-      <p>At Veritas University, you'll find a wide range of programs in the arts, sciences, humanities, and professional fields. Our faculty are distinguished scholars and practitioners who are dedicated to teaching and mentoring. Our campus offers a welcoming and supportive environment where students can learn, grow, and thrive.</p>
-      <p>We hope you'll consider joining the Veritas University community. Explore our website to learn more about our academics, admissions, campus life, and more. And don't hesitate to contact us with any questions you may have.</p>
+      <p>Veritas University is a top-ranked, private university located in Anytown, USA. We offer a wide range of academic programs at the undergraduate, graduate, and doctoral levels, in fields such as business, engineering, science, liberal arts, and more. Our faculty are experts in their fields, and our small class sizes and personalized approach to education ensure that our students receive the best possible education.</p>
+      <p>At Veritas, we believe that a strong foundation in the liberal arts is essential for a well-rounded education. We offer a range of liberal arts programs, including philosophy, history, literature, and more. Our liberal arts programs are designed to help students develop critical thinking skills, communicate effectively, and think creatively. We also offer a range of professional programs, including business, engineering, and more, which are designed to prepare students for successful careers in their chosen fields.</p>
+      <p>Veritas University is more than just an academic institution. We are a community of learners, teachers, and staff who are passionate about education and personal growth. Our campus is a welcoming and inclusive place, where students can participate in a wide range of extracurricular activities and make lasting friendships. We encourage all of our students to get involved in campus life, whether through clubs, sports, or other activities.</p>
+      <p>If you are interested in learning more about Veritas University, we encourage you to explore our website and get in touch with us. You can find more information about our academic programs, admissions process, and campus life on the following pages:</p>
+      <ul>
+        <li><a href="about.html">About Veritas University</a></li>
+        <li><a href="academics.html">Academic Programs</a></li>
+        <li><a href="admissions.html">Admissions</a></li>
+        <li><a href="campus-life.html">Campus Life</a></li>
+      </ul>
+      <p>If you have any questions or would like more information, please don't hesitate to contact us. You can reach the admissions office at <a href="mailto:admissions@veritas.edu">admissions@veritas.edu</a> or <a href="tel:555-555-5555">(555) 555-5555</a>. You can also schedule a virtual appointment with an admissions counselor by visiting the <a href="admissions.html">admissions website</a>.</p>
+      <p>We hope to see you on campus soon!</p>
     </main>
+    <footer>
+      <p>Veritas University | 123 Main Street | Anytown, USA 12345 | (555) 555-5555</p>
+      <p>Copyright 2021 Veritas University. All rights reserved.</p>
+    </footer>
   </body>
 </html>
