--- a/transfer-admissions.html
+++ b/transfer-admissions.html
@@ -13,6 +13,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="academics.html">Academics</a></li>
           <li><a href="admissions.html">Admissions</a></li>
+          <li><a href="transfer-admissions.html">Transfer Admissions</a></li>
           <li><a href="campus-life.html">Campus Life</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -22,19 +23,14 @@
       <h2>Transfer Admissions at Veritas University</h2>
       <p>Veritas University is committed to making higher education accessible to all qualified students, regardless of their previous academic experiences. If you are a transfer student considering studying at Veritas, we are here to help you navigate the admissions process and make the transition to our campus as smooth as possible.</p>
       <h3>Admission Requirements</h3>
-      <p>Transfer students must meet the same admission requirements as first-year students, with a few exceptions. For example, transfer students are not required to submit standardized test scores or high school transcripts. However, you will need to provide transcripts from all colleges and universities that you have attended, as well as a <a href="transfer-evaluation-form.pdf">transfer evaluation form</a>. For a complete list of admission requirements, please visit the <a href="transfer-admissions.html">transfer admissions website</a>.</p>
+      <p>Transfer students must meet the same admission requirements as first-year students, with a few exceptions. For example, transfer students are not required to submit standardized test scores or high school transcripts. However, you will need to provide transcripts from all colleges and universities that you have attended, as well as a <a href="transfer-evaluation-form.pdf">transfer evaluation form</a>. For a complete list of admission requirements, please visit the <a href="admission-requirements.html">admission requirements page</a>.</p>
       <h3>Transfer Credit</h3>
-      <p>Veritas University recognizes the value of prior academic experience and is committed to awarding transfer credit for college-level coursework completed at other institutions. We will evaluate your transcripts and determine which credits are transferable based on our academic policies and guidelines. You can find more information about our transfer credit policies on the <a href="transfer-admissions.html">transfer admissions website</a>.</p>
+      <p>Veritas University recognizes the value of prior academic experience and is committed to awarding transfer credit for college-level coursework completed at other institutions. We will evaluate your transcripts and determine which credits are transferable based on our academic policies and guidelines. You can find more information about our transfer credit policies on the <a href="transfer-credit.html">transfer credit page</a>.</p>
       <h3>Transfer Student Support</h3>
-      <p>We understand that transferring to a new school can be a challenging process, especially if you are coming from a very different academic environment. Veritas University is committed to supporting our transfer students and helping them to succeed both academically and personally. We offer a range of resources and services to help you adjust to life at Veritas, including:</p>
-      <ul>
-        <li>Transfer student orientation</li>
-        <li>Academic advising and counseling</li>
-        <li>Tutoring and study skills support</li>
-        <li>On-campus housing</li>
-      </ul>
-      <p>If you have any questions about the transfer admissions process at Veritas University, or if you need assistance with anything related to your studies at Veritas, please don't hesitate to contact us. You can reach the transfer admissions office at <a
-href="mailto:transfer@veritas.edu">transfer@veritas.edu</a> or <a href="tel:555-555-5555">(555) 555-5555</a>. You can also schedule a virtual appointment with a transfer admissions advisor by visiting the <a href="transfer-admissions.html">transfer admissions website</a>.</p>
+      <p>We understand that transferring to a new school can be a challenging process, especially if you are coming from a very different academic environment. Veritas University is committed to supporting our transfer students and helping them to succeed both academically and personally. We offer a range
+of support services for transfer students, including academic advising, tutoring, and counseling. Our transfer student advisors are here to help you navigate the transition to Veritas and make the most of your time here. You can find more information about our support services for transfer students on the <a href="transfer-support.html">transfer student support page</a>.</p>
+      <h3>Contact Us</h3>
+      <p>If you have any questions about the transfer admissions process at Veritas University, please don't hesitate to contact us. You can reach the transfer admissions office at <a href="mailto:transfer@veritas.edu">transfer@veritas.edu</a> or <a href="tel:555-555-5555">(555) 555-5555</a>. You can also schedule a virtual appointment with a transfer admissions advisor by visiting the <a href="transfer-admissions.html">transfer admissions website</a>.</p>
       <p>We look forward to welcoming you to the Veritas University community!</p>
     </main>
     <footer>
